finally solved localization

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -1124,8 +1124,8 @@ l_english:
  NZL_fascism_DEF:0 "the Kiwi Empire"
  NZL_democratic:0 "Kiwi"
  NZL_democratic_DEF:0 "Kiwi"
- NZL_neutrality:0 "Nova Zeelandia Republic"
- NZL_neutrality_DEF:0 "the Nova Zeelandia Republic"
+ NZL_neutrality:0 "Kiwi Republic"
+ NZL_neutrality_DEF:0 "the kiwi Republic"
  NZL_communism:0 "People's Republic of Aotearoa"
  NZL_communism_DEF:0 "the People's Republic of Aotearoa"
  NZL_fascism_ADJ:0 "Kiwi Empire"
@@ -1227,14 +1227,14 @@ l_english:
  YEM:0 "Yemen"
  YEM_DEF:0 "Yemen"
  YEM_ADJ:0 "Yemeni"
- ETH_fascism:1 "Ethiopian Empire"
- ETH_fascism_DEF:1 "the Ethiopian Empire"
- ETH_democratic:0 "Federal Democratic Republic of Ethiopia"
- ETH_democratic_DEF:0 "the Federal Democratic Republic of Ethiopia"
- ETH_neutrality:0 "Ethiopia"
- ETH_neutrality_DEF:0 "Ethiopia"
- ETH_communism:0 "People's Democratic Republic of Ethiopia"
- ETH_communism_DEF:0 "the People's Democratic Republic of Ethiopia"
+ ETH_fascism:1 "Konjo Empire"
+ ETH_fascism_DEF:1 "the Konjo Empire"
+ ETH_democratic:0 "Federal Democratic Republic of Konjo"
+ ETH_democratic_DEF:0 "the Federal Democratic Republic of Konjo"
+ ETH_neutrality:0 "Konjo"
+ ETH_neutrality_DEF:0 "Konjo"
+ ETH_communism:0 "People's Democratic Republic of Konjo"
+ ETH_communism_DEF:0 "the People's Democratic Republic of Konjo"
  ETH_fascism_ADJ:0 "Ethiopian"
  ETH_democratic_ADJ:0 "Ethiopian"
  ETH_neutrality_ADJ:0 "Ethiopian"
@@ -1242,14 +1242,14 @@ l_english:
  ETH:0 "Ethiopia"
  ETH_DEF:0 "Ethiopia"
  ETH_ADJ:0 "Ethiopian"
- SLO_fascism:0 "Slovakia"
- SLO_fascism_DEF:0 "Slovakia"
- SLO_democratic:0 "Slovak Republic"
- SLO_democratic_DEF:0 "the Slovak Republic"
- SLO_neutrality:0 "Free State of Slovakia"
- SLO_neutrality_DEF:0 "the Free State of Slovakia"
- SLO_communism:0 "Slovak Socialist Republic"
- SLO_communism_DEF:0 "the Slovak Socialist Republic"
+ SLO_fascism:0 "State of Nitra"
+ SLO_fascism_DEF:0 "State of Nitra"
+ SLO_democratic:0 "Nitra Republic"
+ SLO_democratic_DEF:0 "the Nitra Republic"
+ SLO_neutrality:0 "Free State of Nitra"
+ SLO_neutrality_DEF:0 "the Free State of Nitra"
+ SLO_communism:0 "Nitra Socialist Republic"
+ SLO_communism_DEF:0 "the Nitra Socialist Republic"
  SLO_fascism_ADJ:0 "Slovakian"
  SLO_democratic_ADJ:0 "Slovakian"
  SLO_neutrality_ADJ:0 "Slovakian"
@@ -1272,14 +1272,14 @@ l_english:
  BHU:0 "Bhutan"
  BHU_DEF:0 "Bhutan"
  BHU_ADJ:0 "Bhutanese"
- LIB_fascism:0 "Reorganized Liberian Free State"
- LIB_fascism_DEF:0 "Reorganized Liberian Free State"
- LIB_democratic:0 "Liberia"
- LIB_democratic_DEF:0 "Liberia"
- LIB_neutrality:0 "Independent Liberia"
- LIB_neutrality_DEF:0 "Independent Liberia"
- LIB_communism:0 "Liberian Commune"
- LIB_communism_DEF:0 "the Liberian Commune"
+ LIB_fascism:0 "Reorganized Luca Free State"
+ LIB_fascism_DEF:0 "Reorganized Luca Free State"
+ LIB_democratic:0 "Luca"
+ LIB_democratic_DEF:0 "Luca"
+ LIB_neutrality:0 "Independent Luca"
+ LIB_neutrality_DEF:0 "Independent Luca"
+ LIB_communism:0 "Luca Commune"
+ LIB_communism_DEF:0 "the Luca Commune"
  LIB_fascism_ADJ:0 "Liberian"
  LIB_democratic_ADJ:0 "Liberian"
  LIB_neutrality_ADJ:0 "Liberian"
@@ -1302,14 +1302,14 @@ l_english:
  RAJ:0 "India"
  RAJ_DEF:0 "India"
  RAJ_ADJ:0 "Indian"
- CRO_fascism:0 "Independent State of Croatia"
- CRO_fascism_DEF:0 "the Independent State of Croatia"
- CRO_democratic:0 "Republic of Croatia"
- CRO_democratic_DEF:0 "the Republic of Croatia"
- CRO_neutrality:0 "Kingdom of Croatia"
- CRO_neutrality_DEF:0 "the Kingdom of Croatia"
- CRO_communism:0 "SR Croatia"
- CRO_communism_DEF:0 "SR Croatia"
+ CRO_fascism:0 "Independent State of Brodet"
+ CRO_fascism_DEF:0 "the Independent State of Brodet"
+ CRO_democratic:0 "Republic of Brodet"
+ CRO_democratic_DEF:0 "the Republic of Brodet"
+ CRO_neutrality:0 "Kingdom of Brodet"
+ CRO_neutrality_DEF:0 "the Kingdom of Brodet"
+ CRO_communism:0 "SR Brodet"
+ CRO_communism_DEF:0 "SR Brodet"
  CRO_fascism_ADJ:0 "Croatian"
  CRO_democratic_ADJ:0 "Croatian"
  CRO_neutrality_ADJ:0 "Croatian"
@@ -1317,12 +1317,12 @@ l_english:
  CRO:0 "Croatia"
  CRO_DEF:0 "Croatia"
  CRO_ADJ:0 "Croatian"
- GXC_fascism:0 "Third Guangxi Clique"
- GXC_fascism_DEF:0 "the Third Guangxi Clique"
- GXC_democratic:0 "Guangxi Independent Republic"
- GXC_democratic_DEF:0 "the Guangxi Independent Republic"
- GXC_neutrality:0 "Guangxi Clique"
- GXC_neutrality_DEF:0 "the Guangxi Clique"
+ GXC_fascism:0 "Third Rau Clique"
+ GXC_fascism_DEF:0 "the Third Rau Clique"
+ GXC_democratic:0 "Rau Independent Republic"
+ GXC_democratic_DEF:0 "the Rau Independent Republic"
+ GXC_neutrality:0 "Rau Clique"
+ GXC_neutrality_DEF:0 "the Rau Clique"
  GXC_communism:0 "Socialist Republic of the Zhu Jiang"
  GXC_communism_DEF:0 "the Socialist Republic of the Zhu Jiang"
  GXC_fascism_ADJ:0 "Guangxi"
@@ -1332,14 +1332,14 @@ l_english:
  GXC:0 "Guangxi"
  GXC_DEF:0 "Guangxi"
  GXC_ADJ:0 "Guangxi"
- SHX_fascism:0 "Shanxi Yan State"
- SHX_fascism_DEF:0 "the Shanxi Yan State"
- SHX_democratic:0 "Shanxi Republic"
- SHX_democratic_DEF:0 "the Shanxi Republic"
- SHX_neutrality:0 "Shanxi"
- SHX_neutrality_DEF:0 "Shanxi"
- SHX_communism:1 "Shanxi Soviet Republic"
- SHX_communism_DEF:1 "the Shanxi Soviet Republic"
+ SHX_fascism:0 "Hedong State"
+ SHX_fascism_DEF:0 "the Hedong State"
+ SHX_democratic:0 "Hedong Republic"
+ SHX_democratic_DEF:0 "the Hedong Republic"
+ SHX_neutrality:0 "Hedong"
+ SHX_neutrality_DEF:0 "Hedong"
+ SHX_communism:1 "Hedong Soviet Republic"
+ SHX_communism_DEF:1 "the Hedong Soviet Republic"
  SHX_fascism_ADJ:0 "Shanxi"
  SHX_democratic_ADJ:0 "Shanxi"
  SHX_neutrality_ADJ:0 "Shanxi"
@@ -1347,14 +1347,14 @@ l_english:
  SHX:0 "Shanxi"
  SHX_DEF:0 "Shanxi"
  SHX_ADJ:0 "Shanxi"
- XSM_fascism:0 "Xibei San Ma Free State"
- XSM_fascism_DEF:0 "the Xibei San Ma Free State"
+ XSM_fascism:0 "Kokonor Free State"
+ XSM_fascism_DEF:0 "the Kokonor Free State"
  XSM_democratic:0 "Hui Republic"
  XSM_democratic_DEF:0 "the Hui Republic"
- XSM_neutrality:0 "Xibei San Ma"
- XSM_neutrality_DEF:0 "Xibei San Ma"
- XSM_communism:0 "People's Republic of Ma"
- XSM_communism_DEF:0 "the People's Republic of Ma"
+ XSM_neutrality:0 "Kokonor"
+ XSM_neutrality_DEF:0 "Kokonor"
+ XSM_communism:0 "People's Republic of Kokonor"
+ XSM_communism_DEF:0 "the People's Republic of Kokonor"
  XSM_fascism_ADJ:0 "Ma"
  XSM_democratic_ADJ:0 "Ma"
  XSM_neutrality_ADJ:0 "Ma"
@@ -1411,12 +1411,12 @@ l_english:
  SER_ADJ:0 "Serbian"
  ICE_fascism:0 "Islandsveldi"
  ICE_fascism_DEF:0 "the Islandsveldi"
- ICE_democratic:0 "Iceland"
- ICE_democratic_DEF:0 "Iceland"
- ICE_neutrality:0 "Island"
- ICE_neutrality_DEF:0 "Island"
- ICE_communism:0 "Worker's Republic of Iceland"
- ICE_communism_DEF:0 "the Worker's Republic of Iceland"
+ ICE_democratic:0 "Republic of fisk"
+ ICE_democratic_DEF:0 "Republic of fisk"
+ ICE_neutrality:0 "Fisk"
+ ICE_neutrality_DEF:0 "Fisk"
+ ICE_communism:0 "Worker's Republic of Fisk"
+ ICE_communism_DEF:0 "the Worker's Republic of Fisk"
  ICE_fascism_ADJ:0 "Icelandic"
  ICE_democratic_ADJ:0 "Icelandic"
  ICE_neutrality_ADJ:0 "Icelandic"
