QA fix + portrait experiments

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -1,4 +1,4 @@
-l_english:
+﻿l_english:
  GER_fascism:0 "Kuromorimine"
  GER_fascism_DEF:0 "Kuromorimine Girls Academy"
  GER_democratic:0 "Kuromorimine"
