--- a/localisation/english/ideas_l_english.yml
+++ b/localisation/english/ideas_l_english.yml
@@ -199,8 +199,8 @@
  nikita_khrushchev:0 "Nikita Khrushchev"
  alexander_kerensky:0 "Alexander Kerensky"
  konstantin_rodzaevsky:0 "Konstantin Rodzaevsky"
- george_v:0 "King George V"
- george_v_desc:0 "Rallying around the King of the United Kingdom and the British Dominions, as well as Emperor of India, the British people stand united and proud of their imperial legacy."
+ george_v:0 "Earl Grey"
+ george_v_desc:0 "Rallying around the Queen of the United Kingdom and the British Dominions, as well as Emperor of India, the British people stand united and proud of their imperial legacy."
  harry_pollitt:0 "Harry Pollitt"
  clement_attlee:0 "Clement Attlee"
  clement_attlee_desc:0 "A modest man with much to be modest about."
