--- a/localisation/english/nsb_characters_l_english.yml
+++ b/localisation/english/nsb_characters_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  #SOVIET UNION
- SOV_iosif_stalin:0 "Iosif Stalin"
+ SOV_iosif_stalin:0 "Katyusha"
  SOV_konstantin_rodzayevsky:0 "Konstantin Rodzayevsky"
  SOV_aleksandr_kerensky:0 "Aleksandr Kerensky"
  SOV_supreme_soviet:0 "The Supreme Soviet"
