Finnish econ desc for focuses

--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -1504,39 +1504,39 @@ GER_expand_fortlines_desc:0 ""
  FIN_New_Finland_desc:0 "A new era has begun and it's time to claim glory in the name of Jatkosota! And the ideas of Mikko will let us achieve this!"
  
  FIN_norm_industry:0 "Moderate Development"
- FIN_norm_industry_desc:0 ""
+ FIN_norm_industry_desc:0 "Jatkosota is a somewhat Underdeveloped, Much of the nation is disconnected wilderness, we if we wish to stand against Pravdian or Kuromormoine, against both Subversive and Conventional means"
  FIN_use_invenstors:0 "Use Investment"
- FIN_use_invenstors_desc:0 ""
+ FIN_use_invenstors_desc:0 "Whilst being Neutral does mean in times of war, we cannot count on a large amount of foreign support, it does mean that during the peace years we are a inviting location for investment, which can be used to connect our communities"
  FIN_land_reform:0 "Land Reform"
- FIN_land_reform_desc:0 ""
+ FIN_land_reform_desc:0 "Land Inequality used to be a major problem much like it once was in pravda previously, whilst the state holds a great deal of power,its been noticed a large proportion of state land has yet to be developed, but by selling parts of our holdings, and even contracting locals we could easily clear it for future development"
  FIN_prepare_for_war:0 "Prepare for the Next War"
- FIN_prepare_for_war_desc:0 ""
+ FIN_prepare_for_war_desc:0 "Pravda will always no doubt view us as a rebellious region, so ensuring a flexible economy which can cope with the pressures of war is essential to long term national security."
  FIN_industry_innovations:0 "Industry Innovations"
- FIN_industry_innovations_desc:0 ""
+ FIN_industry_innovations_desc:0 "Say what they may about our nation, but all would agree we have the most head strong individuals in the northern parts of Europe, And such drive to improve our peoples lives should be further encouraged"
  FIN_peace_industry:0 "Peacetime Industry"
- FIN_peace_industry_desc:0 ""
+ FIN_peace_industry_desc:0 "Many of our Industries could not be considered Heavy, and that is perfectly fine Jatkosotian lumber products are highly sought after, and we most certainly will never go short on trees."
  FIN_Supermilitarisation:0 "Militarization"
- FIN_Supermilitarisation_desc:0 ""
+ FIN_Supermilitarisation_desc:0 "National Security Must Trump economic ambitions, we do not have time to build up a economy which may not help us in the eventual showdown with pravda, immediate militarization must come first"
  FIN_War_Invertors:0 "Military Investment"
- FIN_War_Invertors_desc:0 ""
+ FIN_War_Invertors_desc:0 "Ensuring proper prioritization of resources towards the further expansion of defence industries is essential to long term security, there must be no red tape endangering the nation"
  FIN_War_Economy:0 "War Economy"
- FIN_War_Economy_desc:0 ""
+ FIN_War_Economy_desc:0 "Everyone must be put to work towards defending the inviability of our soverignty, all must work for the national good"
  FIN_war_industry:0 "Arms Industry"
- FIN_war_industry_desc:0 ""
+ FIN_war_industry_desc:0 "The construction of several national weapons factories capable of pushing out thousands of weapons will no doubt deter further pravdian aggression"
  FIN_civil_industry:0 "Civilian Industry"
- FIN_civil_industry_desc:0 ""
+ FIN_civil_industry_desc:0 "Ensuring the Homefront remains in order is vital to longterm military success, we cannot neglect it and must ensure no one goes hungary, a nation afterall marches on its stomach"
  FIN_war_recearch:0 "Military Research"
- FIN_war_recearch_desc:0 ""
+ FIN_war_recearch_desc:0 "Academia must be directed onto the proper footing, through proper funding we can more easily rely on them for ensuring that new innovations are implemented in a timely manner."
  FIN_Mobilization:0 "Mobilization"
- FIN_Mobilization_desc:0 ""
+ FIN_Mobilization_desc:0 "War is Upon us the charade of peace is over, we must all rally to the flag and defend our homes from these aggressors"
  FIN_Iron_Roads:0 "Railways"
- FIN_Iron_Roads_desc:0 ""
+ FIN_Iron_Roads_desc:0 "Anchovy when she took power in anzio declared she would make the trains run on time, and we must follow her example except for one thing, making the trains actually arrive at all, its a big project but with it we can improve everyones lives with our plan"
  FIN_continue_Lapnan_Roads:0 "Continue Lapland Railways"
- FIN_continue_Lapnan_Roads_desc:0 ""
+ FIN_continue_Lapnan_Roads_desc:0 "Lapland is one of the more isolated region of the nation and, despite many calls hasnt really been connected to the rest of the nation, the rail ends must run throughout the nation no matter the cost."
  FIN_Petsamo_resourses:0 "Petsamo Mines"
- FIN_Petsamo_resourses_desc:0 ""
+ FIN_Petsamo_resourses_desc:0 "The nickel mines in Petsamo are a region of significant economical, and strategic value to us, without it we would struggle to fight a war, much less economically prosper we must give it the support it needs"
  FIN_resourses_efforts:0 "Develop Resource Extraction"
- FIN_resourses_efforts_desc:0 ""
+ FIN_resourses_efforts_desc:0 "With new innovations in resource extraction, it gives us a unique opprutunity to bring untold benifit to our society, we must embrace these concepts and ideas and not become stagnate in practices"
  
  FIN_germany_alliance:0 "Alliance With Kuromorimine"
  FIN_germany_alliance_desc:0 "Now with our new government, it's time to find some new allies. And there is no better option than Kuromorimine, since they have our same ideology and they oppose the Pravda menace."
