very tired will do rest probably tomorrow, fin loc for focus

--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -1480,9 +1480,9 @@ GER_expand_fortlines_desc:0 ""
  FIN_soviet_protection:0 "Pact With the Pravda"
  FIN_soviet_protection_desc:0 "The formation of a pact of defense is the key to get Pravda on our side. If we fail on these we could be doomed to fight with them in the future."
  FIN_learn_soviet_tanks:0 "Studying Pravda Tanks"
- FIN_learn_soviet_tanks_desc:0 ""
+ FIN_learn_soviet_tanks_desc:0 "Despite our best efforts, we cannot do the same as a nation like Turl and have a domestic tank development team, but pravda can provide a excellent template to copy equivelent tank designs"
  FIN_learn_soviet_strategy:0 "Studying Pravda Strategy"
- FIN_learn_soviet_strategy_desc:0 ""
+ FIN_learn_soviet_strategy_desc:0 "We may not have the numbers of pravda but, but we can still study their doctrine and take what would work for us and implement it"
  
  FIN_finnish_neutrality:0 "Finnish Neutrality"
  FIN_finnish_neutrality_desc:0 "We have to accept the reality: there is no way we can defeat Pravda in a war. Therefore, let's start to establish our neutrality so we don't enter into any conflict with them. This is probably for the best."
@@ -1550,6 +1550,7 @@ GER_expand_fortlines_desc:0 ""
  FIN_Build_Light_cruisers:0 "Build Cruisers"
  FIN_Build_Light_cruisers_desc:0 "For the efficiency of our fleet, we need cruisers in it."
  FIN_Develop_submarines:0 "Develop Submarines"
+ 
  FIN_Develop_submarines_desc:0 "The previous war showed the effectiveness of submarines. We need them in our Navy."
  FIN_sky_defence:0 "Air Defense"
  FIN_sky_defence_desc:0 "To fight a successful war, we must protect our industry from enemy bombardment."
@@ -1607,14 +1608,14 @@ GER_expand_fortlines_desc:0 ""
  FIN_independece_desc:0 "A new identity for Jatkosota is visible and it is time to stop being just a school in occupation it is time to proclaim the end of change and the establishment of the Independent Socialist Republic of Jatkosota (ISRJ)"
  
  FIN_flames_of_revolution:0 "Flames of Revolution"
- FIN_flames_of_revolution_desc:0 ""
+ FIN_flames_of_revolution_desc:0 "The time has come to join with our pravdian brothers and sisters in overthrowing the corrupt decadent liberal democracy which oppresses its workers, arise workers of Jatkosota"
  FIN_buy_weapons:0 "Militarization of the Population"
- FIN_buy_weapons_desc:0 ""
+ FIN_buy_weapons_desc:0 "Workers across our great land must raise their hammers high to bash down the capitalist dogs, we must wipe these scum out all must do their part for the revolution, no matter the cost"
  FIN_coup_in_Turky:0 "Coup in Turku"
- FIN_coup_in_Turky_desc:0 ""
+ FIN_coup_in_Turky_desc:0 "Whilst we cannot ensure our plans for immediate revolutionary victory is achieved, we can gather our forces in Turku for a eventual liberation of Helsinki, through the arming of leftist students and workers we can seize the city and kick out the capitalist dogs, thus liberating it from their oppression"
  
  FIN_defeated:0 "Defeated"
- FIN_defeated_desc:0 ""
+ FIN_defeated_desc:0 "The war is lost, despite our best efforts we cannot escape the fallout, pravda has bested us"
  FIN_no_revenge:0 "Recognize the Results of War"
  FIN_no_revenge_desc:0 ""
  FIN_strengthen_the_state:0 "Strengthen the State"
