--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -1300,6 +1300,7 @@ GER_expand_fortlines_desc:0 ""
  cht_phase_investments: "Diverted Civilian Resources"
  cht_phase_investments_desc: "Expansion of our military facilities and personnel requires extensive and expensive funding. To do so, we must redirect our civilian industry for now."
  JAP_zaibatsus_desc: "The Zaibatsus and their power over the academy severly limit our potential as an academy due to their autonomous hegemony over Chi-Ha-Tan. Deciding our approach to them carefully will have its benefits and inevitably, its consequences."
+ JAP_militarism_desc: "Chi-Ha-Tan's formidable spirit makes it have no problem with militarization. But radical elements have lead to its institutionalization thus sacrificing some resources and leaving other sectors alone along the way."
 
  ##CHIHATAN ADVISORS
  JAP_ikuyo_fukuda: "Haru Fukuda"
