fixing some more localization of finnish focuses

--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -1619,15 +1619,15 @@ GER_expand_fortlines_desc:0 ""
  FIN_defeated:0 "Defeated"
  FIN_defeated_desc:0 "The war is lost, despite our best efforts we cannot escape the fallout, pravda has bested us"
  FIN_no_revenge:0 "Recognize the Results of War"
- FIN_no_revenge_desc:0 ""
+ FIN_no_revenge_desc:0 "With the war over, its quite obvious that we wont be able to face pravda in many years, it may be time to accept the fact, that pravda now owns Karelia"
  FIN_strengthen_the_state:0 "Strengthen the State"
- FIN_strengthen_the_state_desc:0 ""
+ FIN_strengthen_the_state_desc:0 "We must harden our hearts going forward, we must prepare the nation for future challenges, the time for indecison has passed, now we require strong cordinated state action"
  FIN_strike_at_back:0 "Strike at Back"
  FIN_strike_at_back_desc:0 ""
  FIN_expand_the_military_budget:0 "Expand the military budget"
- FIN_expand_the_military_budget_desc:0 ""
+ FIN_expand_the_military_budget_desc:0 "The war has shown many shortcomings of our armed forces, and the need to large scale investments to further expand their capablities in preparations for future defensive and offensive operations"
  FIN_reform_military:0 "Reform the military forces"
- FIN_reform_military_desc:0 ""
+ FIN_reform_military_desc:0 "The army has done many great thing to defend the nation, and during the war we learned many great lessons, yet so did pravda we must not grow complacent from our few victories, we must further expand our nations military prowess for true security from any threat that is on the border"
  FIN_salo_line:0 "Salpa Line"
  FIN_salo_line_desc:0 ""
  FIN_prepare_for_revenge:0 "Prepare for Revenge"
@@ -1637,7 +1637,7 @@ GER_expand_fortlines_desc:0 ""
  FIN_retake_east:0 "Retake Eastern Lands"
  FIN_retake_east_desc:0 ""
  FIN_moscow_treaty:0 "Moscow Treaty"
- FIN_moscow_treaty_desc:0 ""
+ FIN_moscow_treaty_desc:0 "The War with pravda has been difficult for all, and the time has come to dip our pens in ink the future of the very nation is at stake"
  
  FDR_revolution:0 "Revolution"
  FDR_revolution_desc:0 ""
