--- a/localisation/replace/gup_replace_l_english.yml
+++ b/localisation/replace/gup_replace_l_english.yml
@@ -19,7 +19,7 @@
  JAP_purge_the_kodoha_faction: "Support the Fukuda Faction"
  JAP_purge_the_kodoha_faction_desc: "With the realization of our situation coming to our concsience, we must act and support Fukuda now on her ventures to reform Chi-Ha-Tan and arise from the ashes once more from our failures."
  JAP_liaison_conference: "Liaison Conference"
- JAP_liaison_conference_desc: "By sending liaisons of all branches of our academy and of the military to a central conference, we can greatly increase our decision-making speed and efficiency."
+ JAP_liaison_conference_desc: "By sending liaisons of all branches of our academy and of the military to a central conference, we can greatly increase our decision-making speed and efficiency. Perhaps we may invite the talents of Tatenashi & co. to join us."
  JAP_greater_east_asian_co_prosperity_sphere: "Chi-Ha-Tan Sphere"
  JAP_greater_east_asian_co_prosperity_sphere_desc: "Let us show to the other contenders that we can have principles to move us forward; and one of those principles shall be that of being able to correct and change one's self dynamically to see what is fit for any given situation."
  JAP_intervene_in_china: "Marco Polo Bridge Incident"
