HIGH QUALITY MUSIC

--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -23,22 +23,22 @@
  newarmoredparadise:0 "New Armored Paradise [Anchovy]"
  greatkatyusha:0 "Great Katyusha [Katyusha]"
  ifoundmyway:0 "I Found My Way [Miho Nishizumi]"
- mywayandyourway:0 "My Way And Your Way [Maho Nishizumi]"
+ mywayandyourway:0 "My Way And Her Way [Maho Nishizumi]"
  themostimportantinlife:0 "The Most Important Thing In Life [Mika]"
  okgoahead:0 "Ok! Go Ahead! [Kay]"
  queenofquality:0 "Queen Of Quality [Darjeeling]"
  wonderlandgoaround:0 "Wonderland-Go-Round [Alice Shimada]"
  bombardmentquest:0 "Bombardment Quest [Kinuyo Nishi]"
- imaschoolgirlnow:0 "I'm A School Girl Now [Miho Nishizumi]"
+ imaschoolgirlnow:0 "School Girl [Miho Nishizumi]"
  infinityorbit:0 "Infinity Orbit [Miho Nishizumi]"
- koiniloveshite:0 "Koi Ni Love Shite [Saori Takebe]"
+ koiniloveshite:0 "Love [Saori Takebe]"
  sunnygirl:0 "Sunny Girl [Saori Takebe]"
- saitahana:0 "Saita Hana [Hana Isuzu]"
- nantesutekinarisouzou:0 "Nante Suteki Na Risozou [Hana Isuzu]"
- koiuta:0 "Koi Uta [Yukari Akiyama]"
+ saitahana:0 "Blooming Hana [Hana Isuzu]"
+ nantesutekinarisouzou:0 "What a Lovely Ideal Image [Hana Isuzu]"
+ koiuta:0 "Tank Road Love Song [Yukari Akiyama]"
  1pldk:0 "1PLDK [Yukari Akiyama]"
  melancholic:0 "Melancholic [Mako Reizei]"
- itsthemorningfightnow:0 "Its The Morning Fight [Mako Reizei]"
+ itsthemorningfightnow:0 "Morning Fight [Mako Reizei]"
  #Generic Flags
  has_died_flag: "has died"
 
