continuation war focus localization finland

--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -1630,19 +1630,19 @@ GER_expand_fortlines_desc:0 ""
  FIN_strengthen_the_state:0 "Strengthen the State"
  FIN_strengthen_the_state_desc:0 "We must harden our hearts going forward, we must prepare the nation for future challenges, the time for indecison has passed, now we require strong cordinated state action"
  FIN_strike_at_back:0 "Strike at Back"
- FIN_strike_at_back_desc:0 ""
+ FIN_strike_at_back_desc:0 "Pravda has gotten itself into a rather unique position, something we could potentially take advantage of the preperations have been completed and now is the time to fight for the future of Jatkosota"
  FIN_expand_the_military_budget:0 "Expand the military budget"
  FIN_expand_the_military_budget_desc:0 "The war has shown many shortcomings of our armed forces, and the need to large scale investments to further expand their capablities in preparations for future defensive and offensive operations"
  FIN_reform_military:0 "Reform the military forces"
  FIN_reform_military_desc:0 "The army has done many great thing to defend the nation, and during the war we learned many great lessons, yet so did pravda we must not grow complacent from our few victories, we must further expand our nations military prowess for true security from any threat that is on the border"
  FIN_salo_line:0 "Salpa Line"
- FIN_salo_line_desc:0 ""
+ FIN_salo_line_desc:0 "The Mannerhiem line did a great many things but the lack of even more substantial resources behind it meant it was doomed from the start, we must prepare for the next war and ready for a eventual second war"
  FIN_prepare_for_revenge:0 "Prepare for Revenge"
- FIN_prepare_for_revenge_desc:0 ""
+ FIN_prepare_for_revenge_desc:0 "Despite the loss we learned many lessons chief of all was that we did not make sufficent preperations prior to the war, we must correct this mistake quickly to avoid it occuring again, we must begin stockpiling supplies for the next war"
  FIN_germany_coop:0 "Cooperation with Kuromorimine"
- FIN_germany_coop_desc:0 ""
+ FIN_germany_coop_desc:0 "Kuromorimine and Jatkosota have one common adversary pravda, despite our differences we can do great many things, perhaps we could get them to send us a military attache"
  FIN_retake_east:0 "Retake Eastern Lands"
- FIN_retake_east_desc:0 ""
+ FIN_retake_east_desc:0 "The time has come we shall reclaim the lands lost to Pravda and take back Karelia from them, victory will be hard but we must try our best to win this"
  FIN_moscow_treaty:0 "Moscow Treaty"
  FIN_moscow_treaty_desc:0 "The War with pravda has been difficult for all, and the time has come to dip our pens in ink the future of the very nation is at stake"
  
