some more localization for finland

--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -1698,15 +1698,15 @@ GER_expand_fortlines_desc:0 ""
  FDR_war_research_desc:0 ""
  
  FDR_rearmament:0 "Rearmament"
- FDR_rearmament_desc:0 ""
+ FDR_rearmament_desc:0 "Jatkosota can't sit around forever, with new threats looming over the horizon, we need to be able to prepare ourselves for conflicts on our borders"
  FDR_develop_artillery:0 "Develop Artillery"
- FDR_develop_artillery_desc:0 ""
+ FDR_develop_artillery_desc:0 "Jatkosota's artillery is lacking and it's falling behind. Mika thinks we need more artillery guns in the school if we are to defend ourselves. Katyusha says she might have a bunch of artillery cannon designs that have been rejected that we can look at and make improvements to. "
  FDR_infantry_weapon:0 "Equipment Effort"
- FDR_infantry_weapon_desc:0 ""
+ FDR_infantry_weapon_desc:0 "With the weapon stockpiles having been counted, many designs date back to the school's independence and its civil war. These are horribly outdated and with warfare changing, we need to look into modernizing the arsenel. "
  FDR_defense_strategy:0 "Defensive Focus"
- FDR_defense_strategy_desc:0 ""
+ FDR_defense_strategy_desc:0 "If Sun Tzu's words are true, then the best way to face a tougher opponent is to defend yourself as the attacker will suffer greater casualties that way. It is the best way if we are to conduct ourselves if we are faced against overwhelming odds"
  FDR_attack_strategy:0 "Aggressive Focus"
- FDR_attack_strategy_desc:0 ""
+ FDR_attack_strategy_desc:0 "Whilst being operationally aggressive is considered unfesible due to the size of the army, we at the very least encourage local aggressive tactics which will maximize enemy casualties, though to bring soldiers up to standards training will need to be very aggressive"
  FDR_north_defense_line:0 "North Defense Line"
  FDR_north_defense_line_desc:0 ""
  FDR_sea_defense_line:0 "Sea Defense Line"
