first communist finland local

--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -1647,13 +1647,13 @@ GER_expand_fortlines_desc:0 ""
  FIN_moscow_treaty_desc:0 "The War with pravda has been difficult for all, and the time has come to dip our pens in ink the future of the very nation is at stake"
  
  FDR_revolution:0 "Revolution"
- FDR_revolution_desc:0 ""
+ FDR_revolution_desc:0 "At last Jatkosota rises up against the bourgeoisie of the nation, throwing of the chains of capitalism and moving to reclaim our nation and joining our pravdian brothers in fighting against capitalist influence"
  FDR_restore_red_guard:0 "Restore Red Guard"
- FDR_restore_red_guard_desc:0 ""
+ FDR_restore_red_guard_desc:0 "The Red Guard once rose up to defend Jatkosota workers from oppression only to be crushed, now is the time to reclaim that idea and fight against these bastards, finally liberating the workers of the nation and the world"
  FDR_revolt_in_lapland:0 "Revolt in Lapland"
- FDR_revolt_in_lapland_desc:0 ""
+ FDR_revolt_in_lapland_desc:0 "The region of lapland is quite unindustrialized compared to other locations in the nation, and there are many sympathetic individuals who see the government as abandoning them, surely by promising them increased government attention we can get them to join our revolt"
  FDR_revolt_in_karelia:0 "Revolt in Karelia"
- FDR_revolt_in_karelia_desc:0 ""
+ FDR_revolt_in_karelia_desc:0 "A Somewhat rural area, this location has been the most difficult to have control, and whilst lacking in population it does have a border with pravda from which they can smuggle weapons and ammunition, thus swaying locals is essential for the workers revolution to truly succeed "
  
  
  
