--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -569,14 +569,14 @@
  AFG:0 "Afghanistan"
  AFG_DEF:0 "Afghanistan"
  AFG_ADJ:0 "Afghan"
- ARG_fascism:0 "Islas Malvinas League"
- ARG_fascism_DEF:0 "the Islas Malvinas League"
- ARG_democratic:0 "Islas Malvinas Republic"
- ARG_democratic_DEF:0 "the Islas Malvinas Republic"
- ARG_neutrality:0 "Islas Malvinas "
- ARG_neutrality_DEF:0 "Islas Malvinas"
- ARG_communism:0 "Islas Malvinas Populares"
- ARG_communism_DEF:0 "Islas Malvinas Populares"
+ ARG_fascism:0 "Aconcagua League"
+ ARG_fascism_DEF:0 "Aconcagua League"
+ ARG_democratic:0 "Aconcagua Republic"
+ ARG_democratic_DEF:0 "the Aconcagua Republic"
+ ARG_neutrality:0 "Aconcagua"
+ ARG_neutrality_DEF:0 "Aconcagua"
+ ARG_communism:0 "Aconcagua"
+ ARG_communism_DEF:0 "Aconcagua"
  ARG_fascism_ADJ:0 "Argentinean"
  ARG_democratic_ADJ:0 "Argentinean"
  ARG_neutrality_ADJ:0 "Argentinean"
