Jatkosota socialist focus localization

--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -1440,7 +1440,7 @@ GER_expand_fortlines_desc:0 ""
  FIN_protect_karelia:0 "Protect Karelia"
  FIN_protect_karelia_desc:0 "Karelia is a mostly exposed region of our land, so if we want to defend it WE NEED TO BUILD A WALL of impenetrable fortresses! "
  FIN_mine_borders:0 "Mining The Border"
- FIN_mine_borders_desc:0 ""
+ FIN_mine_borders_desc:0 "Despite our nations exceptional sharpshooters we lack the modern weapons to effectively combat enemy armour, thus rather then anti tank guns we must use tank mines, thankfully they are cheap allowing us to secure large swaths of territory with little personal in support"
  FIN_antitank:0 "Anti-Tank Warfare"
  FIN_antitank_desc:0 "Pravda's might is in their industry and they are making tanks with it. If we are to stand against them, we need the ideal weapons for the task."
  FIN_war_on_independence:0 "War of Independence"
@@ -1658,19 +1658,19 @@ GER_expand_fortlines_desc:0 ""
  
  
  FDR_socialism_reustavration:0 "Socialist Restoration"
- FDR_socialism_reustavration_desc:0 ""
+ FDR_socialism_reustavration_desc:0 "With our victory in the civil war, we can finally implement our workers paradise we shall restore the truest state of liberty free of capitalist oppression"
  FDR_peoples_republic:0 "People's Republic"
- FDR_peoples_republic_desc:0 ""
+ FDR_peoples_republic_desc:0 "The state will be supreme and the people are the state, the Peoples republic of Jatkosota will reign forever, long live the workers revolution"
  FDR_trird_year_plan:0 "The Third Year Plan"
- FDR_trird_year_plan_desc:0 ""
+ FDR_trird_year_plan_desc:0 "We must industrialize rapidly with worker owned collectives, a three year plan of our own simlar to Katyusha's genius plan will be enacted, only those that reist the workers revolution have anything to lose"
  FDR_restore_sovet_system:0 "Restore Soviets System"
- FDR_restore_sovet_system_desc:0 ""
+ FDR_restore_sovet_system_desc:0 "With victory in the civil war and the triumph of the revolution, we have at last seized the means of production, the time to implent the regional and supreme soviets is upon us, long live the revolution"
  FDR_restore_red_army:0 "Restore Red Army"
- FDR_restore_red_army_desc:0 ""
+ FDR_restore_red_army_desc:0 "The Jatkosota Red Army will stand resolutely to defend the revolution, commisars shall be used to ensure counter revolutionary thought does not spread, as we organize loyalist troops to prevent any further counter revolutionary revolts"
  FDR_begin_motoriation:0 "Begin Motorization"
- FDR_begin_motoriation_desc:0 ""
+ FDR_begin_motoriation_desc:0 "With the rise of pravda also came the rise of mechanization, with motorized forces being implmented by counter revolutionary forces across the globe, we must not become decedent and implent these new tools and mechanize our entire force"
  FDR_sov-fin_training:0 "Military Exercises"
- FDR_sov-fin_training_desc:0 ""
+ FDR_sov-fin_training_desc:0 "We must continue to expand our horizons, through uses of our limited armoured cars, trucks and tanks in conjunction with planes we can begin to futher understand how to conduct ourselves on the modern battlefield"
  FDR_red_sky:0 "Red Sky"
  FDR_red_sky_desc:0 ""
  FDR_red_navy:0 "Red Navy"
