red air finland

--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -1672,7 +1672,7 @@ GER_expand_fortlines_desc:0 ""
  FDR_sov-fin_training:0 "Military Exercises"
  FDR_sov-fin_training_desc:0 "We must continue to expand our horizons, through uses of our limited armoured cars, trucks and tanks in conjunction with planes we can begin to futher understand how to conduct ourselves on the modern battlefield"
  FDR_red_sky:0 "Red Sky"
- FDR_red_sky_desc:0 ""
+ FDR_red_sky_desc:0 "The Jatkosota Red Army will with time become a force to be wreckoned with, but the airforce is rather lacking to truly suceed as a organized force we must put substantial resources into building up a well funded airforce to defend the revolution"
  FDR_red_navy:0 "Red Navy"
  FDR_red_navy_desc:0 ""
  FDR_VCheCa:0 "Establishment of the Cheka"
