Finland communist industria stuff

--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -1674,20 +1674,20 @@ GER_expand_fortlines_desc:0 ""
  FDR_red_sky:0 "Red Sky"
  FDR_red_sky_desc:0 "The Jatkosota Red Army will with time become a force to be wreckoned with, but the airforce is rather lacking to truly suceed as a organized force we must put substantial resources into building up a well funded airforce to defend the revolution"
  FDR_red_navy:0 "Red Navy"
- FDR_red_navy_desc:0 ""
+ FDR_red_navy_desc:0 "Jatkosota has never had a powerful navy, but with our allies in the east we could build up a truly glorious Red Navy capable of defending our borders and coastline from the capitalist filth"
  FDR_VCheCa:0 "Establishment of the Cheka"
- FDR_VCheCa_desc:0 ""
+ FDR_VCheCa_desc:0 "Whispers of counter-revolution can be heard amongst many traitors to the workers, we need a insitution which will crush these tratorious ideas from spreading, the RED TERROR as the capitalist world calls it shall be the law of the land, the Revolution must be protected"
  
  FDR_moderate_collectivization:0 "Moderate Collectivization"
- FDR_moderate_collectivization_desc:0 ""
+ FDR_moderate_collectivization_desc:0 "When has Communism ever failed, THATS RIGHT it never has and shall not, the formation of worker owned collectives which seek to enrich the workers is a top priority, the worker of the world will soon be free"
  FDR_nationalization:0 "Nationalization"
- FDR_nationalization_desc:0 ""
+ FDR_nationalization_desc:0 "Foreign firms have been allowed to operate in our lands for far too long, its time to nationalize these companies and give them to the workers, we shall win the battle against capitalism
  FDR_start_industrialization:0 "Start Industrialization"
- FDR_start_industrialization_desc:0 ""
+ FDR_start_industrialization_desc:0 "For the Revolution to survive we must industrialize rapidly, with quotas to keep production up, we can expect a true miracle for the workers of the nation, as everyone works to make a true industrial workers paradise"
  FDR_develop_light_industry:0 "Develop Light Industry"
- FDR_develop_light_industry_desc:0 ""
+ FDR_develop_light_industry_desc:0 "The development of a good consumer industrial base is essential for long term communist success, ensuring food remains on peoples plates will prove to them the superiority of communist power, and any instances of that not being the case must be due to covert capitalist sabotage"
  FDR_develop_heavy_industry:0 "Develop Heavy Industry"
- FDR_develop_heavy_industry_desc:0 ""
+ FDR_develop_heavy_industry_desc:0 "With the development of electronics, and the introduction of rare earth metals in industrial work, the demands for our resources grow everyday things like chromium could make us a wonderful amount of capital to help our workers, thus we must invest in their development"
  FDR_prepare_for_war:0 "Prepare for War"
  FDR_prepare_for_war_desc:0 ""
  FDR_develop_faraway_regions:0 "Develop Faraway Regions"
